# hearthealthml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AWS_SETUP.md  CLAUDE.md  ML_PIPELINE.md  main.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  train.yml
api/: __init__.py  dependencies.py  main.py  models.py
app/: __init__.py  streamlit_app.py
configs/: config.yaml  feature_config.yaml  model_config.yaml
data/raw/: .gitignore
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml
docs/: MLOPS_LEARNING_TUTORIAL.md  TECH_DEBT.md
lambda/: __init__.py  handler.py  requirements.txt
monitoring/: prometheus.yml
monitoring/alerts/: hearthealthml.yml
monitoring/grafana/dashboards/: hearthealthml.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
scripts/: deploy_ec2.sh  deploy_lambda.sh  push_to_ecr.sh  setup_aws.sh  teardown_aws.sh  train_model.py
src/: __init__.py
src/data/: __init__.py  loader.py  preprocessor.py  splitter.py
src/evaluation/: __init__.py  evaluate.py  metrics.py
src/features/: __init__.py  build_features.py  selection.py
src/models/: __init__.py  predict.py  registry.py  train.py
src/monitoring/: __init__.py  model_monitor.py  prediction_logger.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_api.py  test_config.py  test_data.py  test_evaluation.py  test_features.py  test_models.py  test_monitoring.py  test_predict.py  test_registry.py
